# learning-systems-project

./: .gitignore  default-params.toml  gen-params-random.py  generate-hex-games.py  main.py  pyproject.toml  render-confusion-matrix.py  sort-runs.nu  source-me-to-use-pycuda.nu  start-random-search.nu
data/: 13x13_medium.csv  13x13_small.csv  3x3_medium.csv  5x5_medium.csv  5x5_small.csv  9x9_medium.csv  9x9_small.csv
runs/2024-12-17T18:06:56/: confusion_matrix.csv  log.txt  params.toml  results.toml  weights.csv
runs/2024-12-17T18:10:41/: confusion_matrix.csv  log.txt  params.toml  results.toml  weights.csv
runs/2024-12-17T18:18:49/: confusion_matrix.csv  log.txt  params.toml  results.toml  weights.csv
runs/2024-12-17T18:34:44/: confusion_matrix.csv  log.txt  params.toml  results.toml  weights.csv
runs/2024-12-17T18:39:32/: log.txt  params.toml  results.toml  weights.csv
runs/2024-12-17T18:43:48/: log.txt  params.toml  results.toml  weights.csv
runs/2024-12-17T18:59:45/: confusion_matrix.csv  dataset.toml  log.txt  params.toml  results.toml  weights.csv
runs/2024-12-17T19:26:24/: log.txt  params.toml  results.toml  weights.csv
runs/2024-12-17T19:44:24/: confusion_matrix.csv  log.txt  params.toml  results.toml  weights.csv
runs/2024-12-17T20:13:07/: log.txt  params.toml  results.toml  weights.csv
runs/2024-12-17T21:48:50/: confusion_matrix.csv  log.txt  params.toml  results.toml  weights.csv
runs/2024-12-17T22:13:29/: confusion_matrix.csv  log.txt  params.toml  results.toml  weights.csv
runs/2024-12-17T22:22:21/: log.txt  params.toml  results.toml  (+1 more)
(+353 files in other folders)
