[tool.poetry]
name = "hex-3x3-sample"
description = "A short description of your project."
authors = []
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.22.0"
pandas = "^2.2.3"
graphtsetlinmachine = "^0.3.1"
numba = "^0.60.0"
pycuda = "^2024.1.2"
scipy = "^1.14.1"
toml = "^0.10.2"
bpython = "^0.24"
psutil = "^6.1.0"
scikit-learn = "^1.6.0"
sympy = "^1.13.3"
seaborn = "^0.13.2"
